tests/macros/expand/validate.stderr
error: option `validate` does not exist for kind `expand`
 --> $DIR/validate.rs:2:46
  |
2 |     let q = inquisition::questions![expand { validate: todo!() }];
  |                                              ^^^^^^^^
