tests/macros/expand/validate.rs
fn main() {
    let q = inquisition::questions![expand { validate: todo!() }];
}
